--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -2,6 +2,12 @@
   <!-- Nav Bar -->
   <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}" role="navigation">
     <div class="container">
+      {% if page.title != 'About' %}
+        <a href="{{ '/' | relative_url }}">
+          <img src="{{ '/assets/img/lab_logo_neat_white.png' | relative_url }}"  style='width: 25%; object-fit: contain'  alt="{% if site.title != 'blank' %}{{ site.title }}{% else %}{{ site.first_name }} {{ site.middle_name }}  {{ site.last_name }}{% endif %}"/>
+        </a>
+      {% endif %}
+      {% comment %}
       {% if page.permalink != '/' %}
         <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
           {% if site.title == 'blank' %}
@@ -24,6 +30,7 @@
         <!-- Social Icons -->
         <div class="navbar-brand social">{% include social.liquid %}</div>
       {% endif %}
+      {% endcomment %}
       <!-- Navbar Toggle -->
       <button
         class="navbar-toggler collapsed ml-auto"
