--- a/_includes/social_header.liquid
+++ b/_includes/social_header.liquid
@@ -15,4 +15,5 @@
     {% if site.wikidata_id %}<a href="https://www.wikidata.org/wiki/{{ site.wikidata_id }}" target="_blank" title="Wikidata"><i class="fas fa-barcode"></i></a>{% endif %}
     {% if site.strava_userid %}<a href="https://www.strava.com/athletes/{{ site.strava_userid }}" target="_blank" title="Strava"><i class="fab fa-strava"></i></a>{% endif %}
     {% if site.keybase_username %}<a href="https://keybase.io/{{ site.keybase_username }}" target="_blank" title="Keybase"><i class="fab fa-keybase"></i></a>{% endif %}
+    {% if site.gmap_id %}<a href="https://maps.app.goo.gl/{{ site.gmap_id }}" target="_blank" title="Google map"><i class="fa-solid fa-map-location-dot"></i></a>{% endif %}
   </h1>
