--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1305,8 +1305,6 @@ ninja-keys::part(ninja-input-wrapper) {
   color: var(--global-text-color);
 }
 
-
-
 // Profile
 
 .profile {
@@ -1318,7 +1316,7 @@ ninja-keys::part(ninja-input-wrapper) {
       font-size: 1.2rem;
     }
     .post {
-      font-size: .8rem;
+      font-size: 0.8rem;
     }
     margin-bottom: 5px;
     margin-top: 5px;
@@ -1333,7 +1331,9 @@ ninja-keys::part(ninja-input-wrapper) {
   .profile {
     width: 30%;
     .address {
-      p { display: block; }
+      p {
+        display: block;
+      }
     }
   }
 }
@@ -1350,10 +1350,17 @@ ninja-keys::part(ninja-input-wrapper) {
   }
 }
 
-
 // Typography
 
-p, h1, h2, h3, h4, h5, h6, div, strong {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+strong {
   color: var(--global-text-color);
 }
 article {
@@ -1363,7 +1370,8 @@ article > h2 {
   margin-top: 4rem;
 }
 
-a, table.table a {
+a,
+table.table a {
   color: var(--global-theme-color);
   &:hover {
     color: var(--global-theme-color);
@@ -1399,7 +1407,7 @@ blockquote p {
       max-height: 100%;
     }
 
-    img[src $= ".svg"] {
+    img[src$=".svg"] {
       width: 100%;
       height: 100%;
     }
@@ -1407,7 +1415,7 @@ blockquote p {
 
   .completed {
     height: 1rem;
-    border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
+    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
   }
 
   .completed + .card-header {
@@ -1417,7 +1425,7 @@ blockquote p {
 }
 
 a.no-decoration:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 // Team
