--- a/_layouts/team.liquid
+++ b/_layouts/team.liquid
@@ -4,7 +4,7 @@ layout : page
 {% assign groups = site.members | sort: "group_rank" | map: "group" | uniq %}
 {% for group in groups %}
 
-## {{ group }}
+<h2> {{ group }} </h2>
 
     {% assign members = site.members | sort: "lastname" | where: "group", group %}
     {% for member in members %}
