--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -1,10 +1,10 @@
 <header>
   <!-- Nav Bar -->
   <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}" role="navigation">
-    <div class="container">
+    <div class="container" style = 'width: 900px; height: 50px'>
       {% if page.title != 'About' %}
         <a href="{{ '/' | relative_url }}">
-          <img src="{{ '/assets/img/lab_logo_neat_white.png' | relative_url }}"  style='width: 25%; object-fit: contain'  alt="{% if site.title != 'blank' %}{{ site.title }}{% else %}{{ site.first_name }} {{ site.middle_name }}  {{ site.last_name }}{% endif %}"/>
+          <img src="{{ '/assets/img/lab_logo_neat_white.png' | relative_url }}"  style='width: auto; height: 50px; object-fit: contain'  alt="{% if site.title != 'blank' %}{{ site.title }}{% else %}{{ site.first_name }} {{ site.middle_name }}  {{ site.last_name }}{% endif %}"/>
         </a>
       {% endif %}
       {% comment %}
