Add co-author information

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -66,6 +66,9 @@ layout: default
       <h2>
         <a href="{{ '/publications/' | relative_url }}" style="color: inherit">Selected publications</a>
       </h2>
+      <p class="post-description">
+        # indicates co-first authors or co-corresponding authors
+      </p>
       {% include selected_papers.liquid %}
     {% endif %}
 
